# nanobot-rs

./: .commitlintrc.yml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODEBUDDY.md  Cargo.toml  Dockerfile  README.md  cliff.toml  count_lines.sh  dockerize.sh  rustfmt.toml
.codebuddy/plan/agent-loop-cli/: requirements.md  task-item.md
.codebuddy/plan/agent-loop-rs/: requirements.md  task-item.md
.codebuddy/plan/auto-tag-workflow/: requirements.md  task-item.md
.codebuddy/plan/bootstrap-files-integration/: requirements.md  task-item.md
.codebuddy/plan/builtin-skills-support/: requirements.md  task-item.md
.codebuddy/plan/channel-message-forwarding/: requirements.md  task-item.md
.codebuddy/plan/cmd-module-refactor/: requirements.md  (+1 more)
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  build.yml  changelog.yml  dockerize.yml  release-bin.yml  release.yml
.opencode/agents/: catchup-hkuds.md
crates/agent/: AGENTS.md  Cargo.toml
crates/agent/src/: bus.rs  lib.rs  loop.rs  tests.rs
crates/agent/src/bus/: mod.rs  tests.rs
crates/agent/src/cmd/: mod.rs  tests.rs
crates/agent/src/cmd/dream/: mod.rs  tests.rs
crates/agent/src/cmd/help/: mod.rs  tests.rs
crates/agent/src/cmd/new/: mod.rs  tests.rs
crates/agent/src/cmd/restart/: mod.rs  tests.rs
crates/agent/src/cmd/status/: mod.rs  tests.rs
crates/agent/src/cmd/stop/: mod.rs  tests.rs
crates/agent/src/hook/: mod.rs  tests.rs
crates/agent/src/loop/: mod.rs  tests.rs
crates/agent/src/progress/: mod.rs  tests.rs
crates/agent/src/tools/message/: mod.rs  tests.rs
crates/agent/src/utils/: mod.rs  tests.rs
crates/channels/: AGENTS.md  Cargo.toml
crates/channels/src/: lib.rs
crates/channels/src/config/: mod.rs  tests.rs
crates/channels/src/dingtalk/: media.rs  mod.rs  tests.rs
crates/channels/src/email/: mod.rs  tests.rs
crates/channels/src/error/: mod.rs
crates/channels/src/feishu/: logger.rs  mod.rs  tests.rs
crates/channels/src/feishu/interactive/: mod.rs  tests.rs
crates/channels/src/feishu/post/: mod.rs  tests.rs
crates/channels/src/manager/: mod.rs  tests.rs
crates/channels/src/messages/: mod.rs  tests.rs
crates/channels/src/traits/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/agent/: mod.rs  tests.rs
crates/cli/src/commands/cron/: mod.rs  tests.rs
crates/cli/src/commands/gateway/: mod.rs  tests.rs
crates/cli/src/commands/onboard/: mod.rs  tests.rs
crates/cli/src/commands/onboard/workspace/: initializer.rs
crates/cli/src/logging/: mod.rs
crates/cli/src/utils/: mod.rs
crates/config/: AGENTS.md  Cargo.toml
crates/context/: AGENTS.md  Cargo.toml
crates/context/src/: builder.rs  error.rs  lib.rs
crates/context/src/builder/: mod.rs  tests.rs
crates/context/tests/: context.rs
crates/cron/: AGENTS.md  Cargo.toml
crates/cron/src/: lib.rs  scheduler.rs  service.rs  storage.rs  tool.rs  types.rs
crates/cron/src/scheduler/: mod.rs  tests.rs
crates/cron/src/service/: mod.rs  tests.rs
crates/cron/src/storage/: mod.rs  tests.rs
crates/cron/src/tool/: mod.rs  tests.rs
crates/cron/src/types/: mod.rs  tests.rs
crates/heartbeat/: AGENTS.md  Cargo.toml
crates/heartbeat/src/: callback.rs  config.rs  error.rs  lib.rs  service.rs  tests.rs
crates/heartbeat/src/service/: mod.rs  tests.rs
crates/mcp/: AGENTS.md  Cargo.toml
crates/mcp/src/: lib.rs  tests.rs  wrapper.rs
crates/memory/: AGENTS.md  Cargo.toml
crates/memory/src/: error.rs  lib.rs  store.rs
crates/memory/src/dream/: mod.rs  tests.rs
crates/memory/src/gitstore/: mod.rs  tests.rs
crates/memory/src/history/: mod.rs  tests.rs
crates/memory/tests/: memory.rs
crates/nanobot/: AGENTS.md  Cargo.toml  build.rs
crates/nanobot/src/: lib.rs  main.rs
crates/nanobot/src/commands/agent/: mod.rs  tests.rs
crates/nanobot/src/commands/cron/: mod.rs  tests.rs
crates/nanobot/src/commands/gateway/: health_check.rs  mod.rs  tests.rs
crates/nanobot/src/commands/onboard/: mod.rs
crates/nanobot/src/commands/onboard/workspace/: initializer.rs  mod.rs  tests.rs
crates/nanobot/src/evaluator/: mod.rs  tests.rs
crates/nanobot/src/logging/: mod.rs  tests.rs
crates/nanobot/src/utils/: mod.rs  tests.rs
crates/provider/: AGENTS.md  Cargo.toml
crates/provider/src/: lib.rs
crates/provider/src/anthropic/: mod.rs  tests.rs
crates/provider/src/any/: mod.rs  tests.rs
crates/provider/src/auto_retry/: mod.rs  tests.rs
crates/provider/src/base/: mod.rs  tests.rs
crates/provider/src/openai/: mod.rs  response.rs  tests.rs
crates/provider/src/provider/: mod.rs  tests.rs
crates/session/: AGENTS.md  Cargo.toml
crates/session/src/: lib.rs  manager.rs  session.rs
crates/session/tests/: manager.rs  session.rs
crates/skills/: AGENTS.md  Cargo.toml  README.md  builtin-sync.sh
crates/skills/builtin/: sync.sh
crates/skills/builtin/memory/: SKILL.md
crates/skills/builtin/tavily-search/: SKILL.md
crates/skills/src/: lib.rs  models.rs
crates/skills/src/builtin/: mod.rs  tests.rs
crates/skills/src/dependency/: mod.rs  tests.rs
crates/skills/src/loader/: mod.rs  tests.rs
crates/skills/src/parser/: mod.rs  tests.rs
crates/skills/src/version/: mod.rs  tests.rs
crates/skills/tests/: skills.rs
crates/subagent/: AGENTS.md  Cargo.toml
crates/subagent/src/: error.rs  lib.rs  manager.rs  task.rs  tool.rs
crates/subagent/tests/: tests.rs
crates/templates/: AGENTS.md  Cargo.toml
crates/tools/: AGENTS.md  Cargo.toml
crates/tools/src/: core.rs  cron_types.rs  fs.rs  lib.rs  registry.rs  shell.rs  tests.rs
crates/tools/src/cron/: mod.rs  scheduler.rs  service.rs  storage.rs  tests.rs
crates/tools/src/cron/scheduler/: tests.rs
crates/tools/src/cron/service/: tests.rs
crates/tools/src/cron/storage/: tests.rs
crates/tools/src/fs/: mod.rs  tests.rs
crates/tools/src/shell/: mod.rs  tests.rs
crates/tools/src/shell/utils/: mod.rs  tests.rs
crates/tools/tests/: filesystem.rs  registry.rs  shell.rs
crates/utils/: AGENTS.md  Cargo.toml
docs/: dreaming.md  skill-metadata.md
(+250 files in other folders)
