[workspace]
members = ["crates/*"]

resolver = "3"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde_json = "1"
serde_yaml = "0.9"
parking_lot = "0.12"
async-trait = "0.1"
async-openai = "0.28"
schemars = "0.8"
tokio-util = "0.7"
walkdir = "2"
tokio-test = "0.4"
tempfile = "3"
futures = "0.3"
http = "1"

# Internal crates
nanobot-config.path = "crates/config"
nanobot-provider.path = "crates/provider"
nanobot-agent.path = "crates/agent"
nanobot-tools.path = "crates/tools"
nanobot-mcp.path = "crates/mcp"
nanobot-session.path = "crates/session"
nanobot-memory.path = "crates/memory"
nanobot-context.path = "crates/context"
nanobot-skills.path = "crates/skills"
nanobot-templates.path = "crates/templates"
nanobot-channels.path = "crates/channels"
nanobot-cron.path = "crates/cron"
nanobot-heartbeat.path = "crates/heartbeat"
nanobot-subagent.path = "crates/subagent"

# Dependency with features
[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.dialoguer]
version = "0.11"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.chrono-tz]
version = "0.10"

[workspace.dependencies.config]
version = "0.15"
features = ["json", "convert-case"]

[workspace.dependencies.temp-env]
version = "0.3"

[workspace.dependencies.cron]
version = "0.15"

[workspace.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[workspace.dependencies.include_dir]
version = "0.7"

[workspace.dependencies.dingtalk-stream]
version = "0.1"

[workspace.dependencies.rmcp]
version = "1.2"
features = ["client", "client-side-sse", "transport-child-process", "transport-streamable-http-client-reqwest"]
