[package]
name = "nanobot-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-provider.workspace = true
nanobot-tools.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
