[package]
name = "nanobot-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-context.workspace = true
nanobot-mcp.workspace = true
nanobot-provider.workspace = true
nanobot-tools.workspace = true
nanobot-session.workspace = true
nanobot-memory.workspace = true
nanobot-channels.workspace = true
nanobot-cron.workspace = true
nanobot-subagent.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
