[package]
name = "nanobot-channels"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true

# HTTP 客户端
reqwest.workspace = true

# 用于钉钉 API
chrono = { workspace = true, features = ["serde"] }

# 钉钉 Stream SDK
dingtalk-stream = { workspace = true }

# 飞书 SDK
feishu-sdk = { version = "0.1.2", features = ["websocket"] }

# UUID 生成（用于临时文件命名）
uuid.workspace = true
