[package]
name = "nanobot-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-provider.workspace = true
nanobot-agent.workspace = true
nanobot-templates.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
