[package]
name = "nanobot-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-provider.workspace = true
nanobot-agent.workspace = true
nanobot-channels.workspace = true
nanobot-templates.workspace = true
nanobot-cron.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["signal"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
