[package]
name = "nanobot-cron"
version = "0.1.0"
edition = "2024"
authors = ["nanobot contributors"]
description = "Cron scheduling functionality for nanobot"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs"] }
tracing.workspace = true
anyhow.workspace = true
schemars.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
uuid.workspace = true

nanobot-tools.workspace = true

[dev-dependencies]
tempfile.workspace = true
