[package]
name = "nanobot-heartbeat"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-provider.workspace = true
nanobot-tools.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
