[package]
name = "nanobot-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
nanobot-provider.workspace = true
nanobot-tools.workspace = true

[dev-dependencies]
tempfile.workspace = true
