[package]
name = "nanobot-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
nanobot-config.workspace = true
nanobot-provider.workspace = true

[dev-dependencies]
tempfile.workspace = true
