[package]
name = "nanobot"
version = "0.1.1"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-provider.workspace = true
nanobot-agent.workspace = true
nanobot-channels.workspace = true
nanobot-templates.workspace = true
nanobot-cron.workspace = true
nanobot-heartbeat.workspace = true
nanobot-session.workspace = true
nanobot-subagent.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["signal"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
chrono.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
