[package]
name = "nanobot"
version = "1.5.2"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-provider.workspace = true
nanobot-agent.workspace = true
nanobot-channels.workspace = true
nanobot-templates.workspace = true
nanobot-cron.workspace = true
nanobot-heartbeat.workspace = true
nanobot-session.workspace = true
nanobot-subagent.workspace = true
nanobot-utils.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-util = "0.7"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dialoguer.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
