[package]
name = "nanobot-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
nanobot-config = { path = "../config" }
nanobot-tools = { path = "../tools" }
async-openai = "0.28"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
