[package]
name = "nanobot-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-config.workspace = true
nanobot-tools.workspace = true
async-openai.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
