[package]
name = "nanobot-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
include_dir.workspace = true

[dev-dependencies]
tempfile.workspace = true
