[package]
name = "nanobot-subagent"
version = "0.1.0"
edition = "2024"

[dependencies]
nanobot-provider.workspace = true
nanobot-tools.workspace = true
nanobot-channels.workspace = true

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
