[package]
name = "nanobot-tools"
version = "0.1.0"
edition = "2024"
authors = ["nanobot contributors"]
description = "AI Agent tools implementation for file system and shell operations"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "process", "fs", "time"] }
tracing.workspace = true
anyhow.workspace = true
schemars.workspace = true
tokio-util.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
